Add warning to outdated Májıpoq episodes

--- a/_layouts/majipoq.html
+++ b/_layouts/majipoq.html
@@ -2,6 +2,9 @@
 layout: default
 wide: true
 ---
+{% if page.outdated %}
+  <p>⚠️ Nỏ ní pảq sa gẻo Tỏaqzu zay. Tảoshao jí tûa nỉq ja bóu cy hõaı nha.</p>
+{% endif %}
 {% include list_nav.html %}
 <img class="wide webtoon" alt="Lủa" src="toa.png">
 {% include list_nav.html %}
