--- a/styles/default.scss
+++ b/styles/default.scss
@@ -34,6 +34,10 @@ footer {
   opacity: 0.6;
 }
 
+h1, h2, h3, h4, h5 {
+  font-weight: 500;
+}
+
 h1 {
   padding-bottom: 8px;
   border-bottom-width: 2px;
